--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"  />
 <meta name="description" content="Dan Hixon Codes" />
-<meta name="keywords" content="life,code,software,development,photography" />
+<meta name="keywords" content="life,code,software,development" />
 <meta name="author" content="Dan Hixon" />
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 <link rel="stylesheet" type="text/css" href="/css/pretty_code.css" />
-<link rel="alternate" type="application/atom+xml" href="http://danhixon.github.com/atom.xml" />
+<link rel="alternate" type="application/atom+xml" href="http://demonkit.github.com/atom.xml" />
 
-<title>über duper - dan's tech blog</title>
+<title>Demonkit's blog</title>
 </head>
 
 <body>
@@ -19,11 +19,11 @@
 
 		</p>
 
-		<h1><a href="/"><div id="logo"></div>über<span class="fade">duper</span></a></h1>
+		<h1><a href="/"><div id="logo"></div>Demonkit<span class="fade">Young</span></a></h1>
 		<div class="slogan">
-				<a href="/code.html" class="pink">code{web}</a> :|: 
-				<a href="/os.html" class="green">software{apple}</a> :|: 
-				<a href="/life.html" class="orange">life{me}</a>
+				<a href="/code.html" class="pink">code</a> :|: 
+        <a href="/os.html" class="green">hardware</a> :|: 
+				<a href="/life.html" class="orange">About me</a>
 		</div>
 
 </div>
@@ -34,12 +34,9 @@
 
 <div id="footer">
 
-    Keep in touch with family:<a href="http://www.spokt.com">spokt.com</a> ||
-    <a href="http://shotbydan.com">shot by dan photograpy</a> ||
-    <a href="http://communicatopia.com">personal blog</a> ||
-    <a href="http://twitter.com/danhixon">twitter</a>
-
-<p>&copy; 2010 <a href="/about.html">Dan Hixon</a>
+    Keep in touch with me:<a href="http://demonkit.github.io">demonkit</a> ||
+    <a href="http://twitter.com/demonkit">twitter</a> 
+<p>&copy; 2014 <a href="/about.html">Demonkit</a>
 
 </div>
 
